--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
 }
 
 body {
-  background-color: #1a1a1a;
+  background-color: #191919;
 }
 .navbar {
   position: fixed;
